c_headers/H5Tpublic.h

#  define libname "libhdf5.so"
/*
 * The IEEE floating point types in various byte orders.
 */
#define H5T_IEEE_F32BE		H5T_IEEE_F32BE_g
#define H5T_IEEE_F32LE		H5T_IEEE_F32LE_g
#define H5T_IEEE_F64BE		H5T_IEEE_F64BE_g
#define H5T_IEEE_F64LE		H5T_IEEE_F64LE_g
/*
 * These are "standard" types.  For instance, signed (2's complement) and
 * unsigned integers of various sizes and byte orders.
 */
#define H5T_STD_I8BE		H5T_STD_I8BE_g
#define H5T_STD_I8LE		H5T_STD_I8LE_g
#define H5T_STD_I16BE		H5T_STD_I16BE_g
#define H5T_STD_I16LE		H5T_STD_I16LE_g
#define H5T_STD_I32BE		H5T_STD_I32BE_g
#define H5T_STD_I32LE		H5T_STD_I32LE_g
#define H5T_STD_I64BE		H5T_STD_I64BE_g
#define H5T_STD_I64LE		H5T_STD_I64LE_g
#define H5T_STD_U8BE		H5T_STD_U8BE_g
#define H5T_STD_U8LE		H5T_STD_U8LE_g
#define H5T_STD_U16BE		H5T_STD_U16BE_g
#define H5T_STD_U16LE		H5T_STD_U16LE_g
#define H5T_STD_U32BE		H5T_STD_U32BE_g
#define H5T_STD_U32LE		H5T_STD_U32LE_g
#define H5T_STD_U64BE		H5T_STD_U64BE_g
#define H5T_STD_U64LE		H5T_STD_U64LE_g
#define H5T_STD_B8BE		H5T_STD_B8BE_g
#define H5T_STD_B8LE		H5T_STD_B8LE_g
#define H5T_STD_B16BE		H5T_STD_B16BE_g
#define H5T_STD_B16LE		H5T_STD_B16LE_g
#define H5T_STD_B32BE		H5T_STD_B32BE_g
#define H5T_STD_B32LE		H5T_STD_B32LE_g
#define H5T_STD_B64BE		H5T_STD_B64BE_g
#define H5T_STD_B64LE		H5T_STD_B64LE_g
#define H5T_STD_REF_OBJ	        H5T_STD_REF_OBJ_g
#define H5T_STD_REF_DSETREG     H5T_STD_REF_DSETREG_g
extern hid_t H5T_STD_I8BE_g;
extern hid_t H5T_STD_I8LE_g;
extern hid_t H5T_STD_I16BE_g;
extern hid_t H5T_STD_I16LE_g;
extern hid_t H5T_STD_I32BE_g;
extern hid_t H5T_STD_I32LE_g;
extern hid_t H5T_STD_I64BE_g;
extern hid_t H5T_STD_I64LE_g;
extern hid_t H5T_STD_U8BE_g;
extern hid_t H5T_STD_U8LE_g;
extern hid_t H5T_STD_U16BE_g;
extern hid_t H5T_STD_U16LE_g;
extern hid_t H5T_STD_U32BE_g;
extern hid_t H5T_STD_U32LE_g;
extern hid_t H5T_STD_U64BE_g;
extern hid_t H5T_STD_U64LE_g;
extern hid_t H5T_STD_B8BE_g;
extern hid_t H5T_STD_B8LE_g;
extern hid_t H5T_STD_B16BE_g;
extern hid_t H5T_STD_B16LE_g;
extern hid_t H5T_STD_B32BE_g;
extern hid_t H5T_STD_B32LE_g;
extern hid_t H5T_STD_B64BE_g;
extern hid_t H5T_STD_B64LE_g;
extern hid_t H5T_STD_REF_OBJ_g;
extern hid_t H5T_STD_REF_DSETREG_g;
/*
 * Types which are particular to Unix.
 */
#define H5T_UNIX_D32BE		H5T_UNIX_D32BE_g
#define H5T_UNIX_D32LE		H5T_UNIX_D32LE_g
#define H5T_UNIX_D64BE		H5T_UNIX_D64BE_g
#define H5T_UNIX_D64LE		H5T_UNIX_D64LE_g
extern hid_t H5T_UNIX_D32BE_g;
extern hid_t H5T_UNIX_D32LE_g;
extern hid_t H5T_UNIX_D64BE_g;
extern hid_t H5T_UNIX_D64LE_g;
/*
 * Types particular to the C language.  String types use `bytes' instead
 * of `bits' as their size.
 */
#define H5T_C_S1		H5T_C_S1_g
extern hid_t H5T_C_S1_g;
/*
 * Types particular to Fortran.
 */
#define H5T_FORTRAN_S1		H5T_FORTRAN_S1_g
extern hid_t H5T_FORTRAN_S1_g;
/*
 * These types are for Intel CPU's.  They are little endian with IEEE
 * floating point.
 */
#define H5T_INTEL_I8		H5T_STD_I8LE
#define H5T_INTEL_I16		H5T_STD_I16LE
#define H5T_INTEL_I32		H5T_STD_I32LE
#define H5T_INTEL_I64		H5T_STD_I64LE
#define H5T_INTEL_U8		H5T_STD_U8LE
#define H5T_INTEL_U16		H5T_STD_U16LE
#define H5T_INTEL_U32		H5T_STD_U32LE
#define H5T_INTEL_U64		H5T_STD_U64LE
#define H5T_INTEL_B8		H5T_STD_B8LE
#define H5T_INTEL_B16		H5T_STD_B16LE
#define H5T_INTEL_B32		H5T_STD_B32LE
#define H5T_INTEL_B64		H5T_STD_B64LE
#define H5T_INTEL_F32		H5T_IEEE_F32LE
#define H5T_INTEL_F64		H5T_IEEE_F64LE
/*
 * These types are for DEC Alpha CPU's.  They are little endian with IEEE
 * floating point.
 */
#define H5T_ALPHA_I8		H5T_STD_I8LE
#define H5T_ALPHA_I16		H5T_STD_I16LE
#define H5T_ALPHA_I32		H5T_STD_I32LE
#define H5T_ALPHA_I64		H5T_STD_I64LE
#define H5T_ALPHA_U8		H5T_STD_U8LE
#define H5T_ALPHA_U16		H5T_STD_U16LE
#define H5T_ALPHA_U32		H5T_STD_U32LE
#define H5T_ALPHA_U64		H5T_STD_U64LE
#define H5T_ALPHA_B8		H5T_STD_B8LE
#define H5T_ALPHA_B16		H5T_STD_B16LE
#define H5T_ALPHA_B32		H5T_STD_B32LE
#define H5T_ALPHA_B64		H5T_STD_B64LE
#define H5T_ALPHA_F32		H5T_IEEE_F32LE
#define H5T_ALPHA_F64		H5T_IEEE_F64LE
/*
 * These types are for MIPS cpu's commonly used in SGI systems. They are big
 * endian with IEEE floating point.
 */
#define H5T_MIPS_I8		H5T_STD_I8BE
#define H5T_MIPS_I16		H5T_STD_I16BE
#define H5T_MIPS_I32		H5T_STD_I32BE
#define H5T_MIPS_I64		H5T_STD_I64BE
#define H5T_MIPS_U8		H5T_STD_U8BE
#define H5T_MIPS_U16		H5T_STD_U16BE
#define H5T_MIPS_U32		H5T_STD_U32BE
#define H5T_MIPS_U64		H5T_STD_U64BE
#define H5T_MIPS_B8		H5T_STD_B8BE
#define H5T_MIPS_B16		H5T_STD_B16BE
#define H5T_MIPS_B32		H5T_STD_B32BE
#define H5T_MIPS_B64		H5T_STD_B64BE
#define H5T_MIPS_F32		H5T_IEEE_F32BE
#define H5T_MIPS_F64		H5T_IEEE_F64BE
/*
 * The VAX floating point types (i.e. in VAX byte order)
 */
#define H5T_VAX_F32		H5T_VAX_F32_g
#define H5T_VAX_F64		H5T_VAX_F64_g
extern hid_t H5T_VAX_F32_g;
extern hid_t H5T_VAX_F64_g;
/*
 * The predefined native types. These are the types detected by H5detect and
 * they violate the naming scheme a little.  Instead of a class name,
 * precision and byte order as the last component, they have a C-like type
 * name.  If the type begins with `U' then it is the unsigned version of the
 * integer type; other integer types are signed.  The type LLONG corresponds
 * to C's `long long' and LDOUBLE is `long double' (these types might be the
 * same as `LONG' and `DOUBLE' respectively).
 */
#define H5T_NATIVE_CHAR		(CHAR_MIN?H5T_NATIVE_SCHAR:H5T_NATIVE_UCHAR)
#define H5T_NATIVE_SCHAR        H5T_NATIVE_SCHAR_g
#define H5T_NATIVE_UCHAR        H5T_NATIVE_UCHAR_g
#define H5T_NATIVE_SHORT        H5T_NATIVE_SHORT_g
#define H5T_NATIVE_USHORT       H5T_NATIVE_USHORT_g
#define H5T_NATIVE_INT          H5T_NATIVE_INT_g
#define H5T_NATIVE_UINT         H5T_NATIVE_UINT_g
#define H5T_NATIVE_LONG         H5T_NATIVE_LONG_g
#define H5T_NATIVE_ULONG        H5T_NATIVE_ULONG_g
#define H5T_NATIVE_LLONG        H5T_NATIVE_LLONG_g
#define H5T_NATIVE_ULLONG       H5T_NATIVE_ULLONG_g
#define H5T_NATIVE_FLOAT        H5T_NATIVE_FLOAT_g
#define H5T_NATIVE_DOUBLE       H5T_NATIVE_DOUBLE_g
#define H5T_NATIVE_LDOUBLE	H5T_NATIVE_LDOUBLE_g
#define H5T_NATIVE_B8		H5T_NATIVE_B8_g
#define H5T_NATIVE_B16		H5T_NATIVE_B16_g
#define H5T_NATIVE_B32		H5T_NATIVE_B32_g
#define H5T_NATIVE_B64		H5T_NATIVE_B64_g
#define H5T_NATIVE_OPAQUE       H5T_NATIVE_OPAQUE_g
#define H5T_NATIVE_HADDR	H5T_NATIVE_HADDR_g
#define H5T_NATIVE_HSIZE	H5T_NATIVE_HSIZE_g
#define H5T_NATIVE_HSSIZE	H5T_NATIVE_HSSIZE_g
#define H5T_NATIVE_HERR		H5T_NATIVE_HERR_g
#define H5T_NATIVE_HBOOL	H5T_NATIVE_HBOOL_g
extern hid_t H5T_NATIVE_SCHAR_g;
extern hid_t H5T_NATIVE_UCHAR_g;
extern hid_t H5T_NATIVE_SHORT_g;
extern hid_t H5T_NATIVE_USHORT_g;
extern hid_t H5T_NATIVE_INT_g;
extern hid_t H5T_NATIVE_UINT_g;
extern hid_t H5T_NATIVE_LONG_g;
extern hid_t H5T_NATIVE_ULONG_g;
extern hid_t H5T_NATIVE_LLONG_g;
extern hid_t H5T_NATIVE_ULLONG_g;
extern hid_t H5T_NATIVE_FLOAT_g;
extern hid_t H5T_NATIVE_DOUBLE_g;
extern hid_t H5T_NATIVE_LDOUBLE_g;
extern hid_t H5T_NATIVE_B8_g;
extern hid_t H5T_NATIVE_B16_g;
extern hid_t H5T_NATIVE_B32_g;
extern hid_t H5T_NATIVE_B64_g;
extern hid_t H5T_NATIVE_OPAQUE_g;
extern hid_t H5T_NATIVE_HADDR_g;
extern hid_t H5T_NATIVE_HSIZE_g;
extern hid_t H5T_NATIVE_HSSIZE_g;
extern hid_t H5T_NATIVE_HERR_g;
extern hid_t H5T_NATIVE_HBOOL_g;
/* C9x integer types */
#define H5T_NATIVE_INT8			H5T_NATIVE_INT8_g
#define H5T_NATIVE_UINT8		H5T_NATIVE_UINT8_g
#define H5T_NATIVE_INT_LEAST8		H5T_NATIVE_INT_LEAST8_g
#define H5T_NATIVE_UINT_LEAST8		H5T_NATIVE_UINT_LEAST8_g
#define H5T_NATIVE_INT_FAST8 		H5T_NATIVE_INT_FAST8_g
#define H5T_NATIVE_UINT_FAST8		H5T_NATIVE_UINT_FAST8_g
extern hid_t H5T_NATIVE_INT8_g;
extern hid_t H5T_NATIVE_UINT8_g;
extern hid_t H5T_NATIVE_INT_LEAST8_g;
extern hid_t H5T_NATIVE_UINT_LEAST8_g;
extern hid_t H5T_NATIVE_INT_FAST8_g;
extern hid_t H5T_NATIVE_UINT_FAST8_g;
#define H5T_NATIVE_INT16		H5T_NATIVE_INT16_g
#define H5T_NATIVE_UINT16		H5T_NATIVE_UINT16_g
#define H5T_NATIVE_INT_LEAST16		H5T_NATIVE_INT_LEAST16_g
#define H5T_NATIVE_UINT_LEAST16		H5T_NATIVE_UINT_LEAST16_g
#define H5T_NATIVE_INT_FAST16		H5T_NATIVE_INT_FAST16_g
#define H5T_NATIVE_UINT_FAST16		H5T_NATIVE_UINT_FAST16_g
extern hid_t H5T_NATIVE_INT16_g;
extern hid_t H5T_NATIVE_UINT16_g;
extern hid_t H5T_NATIVE_INT_LEAST16_g;
extern hid_t H5T_NATIVE_UINT_LEAST16_g;
extern hid_t H5T_NATIVE_INT_FAST16_g;
extern hid_t H5T_NATIVE_UINT_FAST16_g;
#define H5T_NATIVE_INT32		H5T_NATIVE_INT32_g
#define H5T_NATIVE_UINT32		H5T_NATIVE_UINT32_g
#define H5T_NATIVE_INT_LEAST32		H5T_NATIVE_INT_LEAST32_g
#define H5T_NATIVE_UINT_LEAST32		H5T_NATIVE_UINT_LEAST32_g
#define H5T_NATIVE_INT_FAST32		H5T_NATIVE_INT_FAST32_g
#define H5T_NATIVE_UINT_FAST32		H5T_NATIVE_UINT_FAST32_g
extern hid_t H5T_NATIVE_INT32_g;
extern hid_t H5T_NATIVE_UINT32_g;
extern hid_t H5T_NATIVE_INT_LEAST32_g;
extern hid_t H5T_NATIVE_UINT_LEAST32_g;
extern hid_t H5T_NATIVE_INT_FAST32_g;
extern hid_t H5T_NATIVE_UINT_FAST32_g;
#define H5T_NATIVE_INT64		H5T_NATIVE_INT64_g
#define H5T_NATIVE_UINT64		H5T_NATIVE_UINT64_g
#define H5T_NATIVE_INT_LEAST64		H5T_NATIVE_INT_LEAST64_g
#define H5T_NATIVE_UINT_LEAST64 	H5T_NATIVE_UINT_LEAST64_g
#define H5T_NATIVE_INT_FAST64		H5T_NATIVE_INT_FAST64_g
#define H5T_NATIVE_UINT_FAST64		H5T_NATIVE_UINT_FAST64_g
extern hid_t H5T_NATIVE_INT64_g;
extern hid_t H5T_NATIVE_UINT64_g;
extern hid_t H5T_NATIVE_INT_LEAST64_g;
extern hid_t H5T_NATIVE_UINT_LEAST64_g;
extern hid_t H5T_NATIVE_INT_FAST64_g;
extern hid_t H5T_NATIVE_UINT_FAST64_g;