src/nimhdf5/H5Tpublic.nim


var H5T_STD_B64BE_g* {.importc: "H5T_STD_B64BE_g", dynlib: libname.}: hid_t

var H5T_STD_B64LE_g* {.importc: "H5T_STD_B64LE_g", dynlib: libname.}: hid_t

var H5T_STD_REF_OBJ_g* {.importc: "H5T_STD_REF_OBJ_g", dynlib: libname.}: hid_t

var H5T_STD_REF_DSETREG_g* {.importc: "H5T_STD_REF_DSETREG_g", dynlib: libname.}: hid_t

let
  H5T_STD_I8BE* = H5T_STD_I8BE_g
  H5T_STD_I8LE* = H5T_STD_I8LE_g
  H5T_STD_I16BE* = H5T_STD_I16BE_g
  H5T_STD_I16LE* = H5T_STD_I16LE_g
  H5T_STD_I32BE* = H5T_STD_I32BE_g
  H5T_STD_I32LE* = H5T_STD_I32LE_g
  H5T_STD_I64BE* = H5T_STD_I64BE_g
  H5T_STD_I64LE* = H5T_STD_I64LE_g
  H5T_STD_U8BE* = H5T_STD_U8BE_g
  H5T_STD_U8LE* = H5T_STD_U8LE_g
  H5T_STD_U16BE* = H5T_STD_U16BE_g
  H5T_STD_U16LE* = H5T_STD_U16LE_g
  H5T_STD_U32BE* = H5T_STD_U32BE_g
  H5T_STD_U32LE* = H5T_STD_U32LE_g
  H5T_STD_U64BE* = H5T_STD_U64BE_g
  H5T_STD_U64LE* = H5T_STD_U64LE_g
  H5T_STD_B8BE* = H5T_STD_B8BE_g
  H5T_STD_B8LE* = H5T_STD_B8LE_g
  H5T_STD_B16BE* = H5T_STD_B16BE_g
  H5T_STD_B16LE* = H5T_STD_B16LE_g
  H5T_STD_B32BE* = H5T_STD_B32BE_g
  H5T_STD_B32LE* = H5T_STD_B32LE_g
  H5T_STD_B64BE* = H5T_STD_B64BE_g
  H5T_STD_B64LE* = H5T_STD_B64LE_g
  H5T_STD_REF_OBJ* = H5T_STD_REF_OBJ_g
  H5T_STD_REF_DSETREG* = H5T_STD_REF_DSETREG_g


## 
##  Types which are particular to Unix.
## 

var H5T_UNIX_D32BE_g* {.importc: "H5T_UNIX_D32BE_g", dynlib: libname.}: hid_t

var H5T_UNIX_D32LE_g* {.importc: "H5T_UNIX_D32LE_g", dynlib: libname.}: hid_t

var H5T_UNIX_D64BE_g* {.importc: "H5T_UNIX_D64BE_g", dynlib: libname.}: hid_t

var H5T_UNIX_D64LE_g* {.importc: "H5T_UNIX_D64LE_g", dynlib: libname.}: hid_t

let
  H5T_UNIX_D32BE* = H5T_UNIX_D32BE_g
  H5T_UNIX_D32LE* = H5T_UNIX_D32LE_g
  H5T_UNIX_D64BE* = H5T_UNIX_D64BE_g
  H5T_UNIX_D64LE* = H5T_UNIX_D64LE_g


## 
##  Types particular to the C language.  String types use `bytes' instead
##  of `bits' as their size.
## 

var H5T_C_S1_g* {.importc: "H5T_C_S1_g", dynlib: libname.}: hid_t

let
  H5T_C_S1* = H5T_C_S1_g


## 
##  Types particular to Fortran.
## 

var H5T_FORTRAN_S1_g* {.importc: "H5T_FORTRAN_S1_g", dynlib: libname.}: hid_t

let
  H5T_FORTRAN_S1* = H5T_FORTRAN_S1_g

## 
##  These types are for Intel CPU's.  They are little endian with IEEE
##  floating point.
## 

let
  H5T_INTEL_I8* = H5T_STD_I8LE
  H5T_INTEL_I16* = H5T_STD_I16LE
  H5T_INTEL_I32* = H5T_STD_I32LE
  H5T_INTEL_I64* = H5T_STD_I64LE
  H5T_INTEL_U8* = H5T_STD_U8LE
  H5T_INTEL_U16* = H5T_STD_U16LE
  H5T_INTEL_U32* = H5T_STD_U32LE
  H5T_INTEL_U64* = H5T_STD_U64LE
  H5T_INTEL_B8* = H5T_STD_B8LE
  H5T_INTEL_B16* = H5T_STD_B16LE
  H5T_INTEL_B32* = H5T_STD_B32LE
  H5T_INTEL_B64* = H5T_STD_B64LE
  H5T_INTEL_F32* = H5T_IEEE_F32LE
  H5T_INTEL_F64* = H5T_IEEE_F64LE

## 
##  These types are for DEC Alpha CPU's.  They are little endian with IEEE
##  floating point.
## 

let
  H5T_ALPHA_I8* = H5T_STD_I8LE
  H5T_ALPHA_I16* = H5T_STD_I16LE
  H5T_ALPHA_I32* = H5T_STD_I32LE
  H5T_ALPHA_I64* = H5T_STD_I64LE
  H5T_ALPHA_U8* = H5T_STD_U8LE
  H5T_ALPHA_U16* = H5T_STD_U16LE
  H5T_ALPHA_U32* = H5T_STD_U32LE
  H5T_ALPHA_U64* = H5T_STD_U64LE
  H5T_ALPHA_B8* = H5T_STD_B8LE
  H5T_ALPHA_B16* = H5T_STD_B16LE
  H5T_ALPHA_B32* = H5T_STD_B32LE
  H5T_ALPHA_B64* = H5T_STD_B64LE
  H5T_ALPHA_F32* = H5T_IEEE_F32LE
  H5T_ALPHA_F64* = H5T_IEEE_F64LE

## 
##  These types are for MIPS cpu's commonly used in SGI systems. They are big
##  endian with IEEE floating point.
## 

let
  H5T_MIPS_I8* = H5T_STD_I8BE
  H5T_MIPS_I16* = H5T_STD_I16BE
  H5T_MIPS_I32* = H5T_STD_I32BE
  H5T_MIPS_I64* = H5T_STD_I64BE
  H5T_MIPS_U8* = H5T_STD_U8BE
  H5T_MIPS_U16* = H5T_STD_U16BE
  H5T_MIPS_U32* = H5T_STD_U32BE
  H5T_MIPS_U64* = H5T_STD_U64BE
  H5T_MIPS_B8* = H5T_STD_B8BE
  H5T_MIPS_B16* = H5T_STD_B16BE
  H5T_MIPS_B32* = H5T_STD_B32BE
  H5T_MIPS_B64* = H5T_STD_B64BE
  H5T_MIPS_F32* = H5T_IEEE_F32BE
  H5T_MIPS_F64* = H5T_IEEE_F64BE

## 
##  The VAX floating point types (i.e. in VAX byte order)
## 

var H5T_VAX_F32_g* {.importc: "H5T_VAX_F32_g", dynlib: libname.}: hid_t

var H5T_VAX_F64_g* {.importc: "H5T_VAX_F64_g", dynlib: libname.}: hid_t

let
  H5T_VAX_F32* = H5T_VAX_F32_g
  H5T_VAX_F64* = H5T_VAX_F64_g


## 
##  The predefined native types. These are the types detected by H5detect and
##  they violate the naming scheme a little.  Instead of a class name,
##  precision and byte order as the last component, they have a C-like type
##  name.  If the type begins with `U' then it is the unsigned version of the
##  integer type; other integer types are signed.  The type LLONG corresponds
##  to C's `long long' and LDOUBLE is `long double' (these types might be the
##  same as `LONG' and `DOUBLE' respectively).
## 

var H5T_NATIVE_SCHAR_g* {.importc: "H5T_NATIVE_SCHAR_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UCHAR_g* {.importc: "H5T_NATIVE_UCHAR_g", dynlib: libname.}: hid_t

var H5T_NATIVE_SHORT_g* {.importc: "H5T_NATIVE_SHORT_g", dynlib: libname.}: hid_t

var H5T_NATIVE_USHORT_g* {.importc: "H5T_NATIVE_USHORT_g", dynlib: libname.}: hid_t

var H5T_NATIVE_INT_g* {.importc: "H5T_NATIVE_INT_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_g* {.importc: "H5T_NATIVE_UINT_g", dynlib: libname.}: hid_t

var H5T_NATIVE_LONG_g* {.importc: "H5T_NATIVE_LONG_g", dynlib: libname.}: hid_t

var H5T_NATIVE_ULONG_g* {.importc: "H5T_NATIVE_ULONG_g", dynlib: libname.}: hid_t

var H5T_NATIVE_LLONG_g* {.importc: "H5T_NATIVE_LLONG_g", dynlib: libname.}: hid_t

var H5T_NATIVE_ULLONG_g* {.importc: "H5T_NATIVE_ULLONG_g", dynlib: libname.}: hid_t

var H5T_NATIVE_FLOAT_g* {.importc: "H5T_NATIVE_FLOAT_g", dynlib: libname.}: hid_t

var H5T_NATIVE_DOUBLE_g* {.importc: "H5T_NATIVE_DOUBLE_g", dynlib: libname.}: hid_t


const H5_SIZEOF_LONG_DOUBLE = sizeof(clongdouble)
when H5_SIZEOF_LONG_DOUBLE != 0:
  var H5T_NATIVE_LDOUBLE_g* {.importc: "H5T_NATIVE_LDOUBLE_g", dynlib: libname.}: hid_t
var H5T_NATIVE_B8_g* {.importc: "H5T_NATIVE_B8_g", dynlib: libname.}: hid_t

var H5T_NATIVE_B16_g* {.importc: "H5T_NATIVE_B16_g", dynlib: libname.}: hid_t

var H5T_NATIVE_B32_g* {.importc: "H5T_NATIVE_B32_g", dynlib: libname.}: hid_t

var H5T_NATIVE_B64_g* {.importc: "H5T_NATIVE_B64_g", dynlib: libname.}: hid_t

var H5T_NATIVE_OPAQUE_g* {.importc: "H5T_NATIVE_OPAQUE_g", dynlib: libname.}: hid_t

var H5T_NATIVE_HADDR_g* {.importc: "H5T_NATIVE_HADDR_g", dynlib: libname.}: hid_t

var H5T_NATIVE_HSIZE_g* {.importc: "H5T_NATIVE_HSIZE_g", dynlib: libname.}: hid_t

var H5T_NATIVE_HSSIZE_g* {.importc: "H5T_NATIVE_HSSIZE_g", dynlib: libname.}: hid_t

var H5T_NATIVE_HERR_g* {.importc: "H5T_NATIVE_HERR_g", dynlib: libname.}: hid_t

var H5T_NATIVE_HBOOL_g* {.importc: "H5T_NATIVE_HBOOL_g", dynlib: libname.}: hid_t

let
  H5T_NATIVE_SCHAR* = H5T_NATIVE_SCHAR_g
  H5T_NATIVE_CHAR* = H5T_NATIVE_SCHAR
  H5T_NATIVE_UCHAR* = H5T_NATIVE_UCHAR_g
  H5T_NATIVE_SHORT* = H5T_NATIVE_SHORT_g
  H5T_NATIVE_USHORT* = H5T_NATIVE_USHORT_g
  H5T_NATIVE_INT* = H5T_NATIVE_INT_g
  H5T_NATIVE_UINT* = H5T_NATIVE_UINT_g
  H5T_NATIVE_LONG* = H5T_NATIVE_LONG_g
  H5T_NATIVE_ULONG* = H5T_NATIVE_ULONG_g
  H5T_NATIVE_LLONG* = H5T_NATIVE_LLONG_g
  H5T_NATIVE_ULLONG* = H5T_NATIVE_ULLONG_g
  H5T_NATIVE_FLOAT* = H5T_NATIVE_FLOAT_g
  H5T_NATIVE_DOUBLE* = H5T_NATIVE_DOUBLE_g

when H5_SIZEOF_LONG_DOUBLE != 0:
  let
    H5T_NATIVE_LDOUBLE* = H5T_NATIVE_LDOUBLE_g
let
  H5T_NATIVE_B8* = H5T_NATIVE_B8_g
  H5T_NATIVE_B16* = H5T_NATIVE_B16_g
  H5T_NATIVE_B32* = H5T_NATIVE_B32_g
  H5T_NATIVE_B64* = H5T_NATIVE_B64_g
  H5T_NATIVE_OPAQUE* = H5T_NATIVE_OPAQUE_g
  H5T_NATIVE_HADDR* = H5T_NATIVE_HADDR_g
  H5T_NATIVE_HSIZE* = H5T_NATIVE_HSIZE_g
  H5T_NATIVE_HSSIZE* = H5T_NATIVE_HSSIZE_g
  H5T_NATIVE_HERR* = H5T_NATIVE_HERR_g
  H5T_NATIVE_HBOOL* = H5T_NATIVE_HBOOL_g



##  C9x integer types

var H5T_NATIVE_INT8_g* {.importc: "H5T_NATIVE_INT8_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT8_g* {.importc: "H5T_NATIVE_UINT8_g", dynlib: libname.}: hid_t

var H5T_NATIVE_INT_LEAST8_g* {.importc: "H5T_NATIVE_INT_LEAST8_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_LEAST8_g* {.importc: "H5T_NATIVE_UINT_LEAST8_g", dynlib: libname.}: hid_t

var H5T_NATIVE_INT_FAST8_g* {.importc: "H5T_NATIVE_INT_FAST8_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_FAST8_g* {.importc: "H5T_NATIVE_UINT_FAST8_g", dynlib: libname.}: hid_t

let
  H5T_NATIVE_INT8* = H5T_NATIVE_INT8_g
  H5T_NATIVE_UINT8* = H5T_NATIVE_UINT8_g
  H5T_NATIVE_INT_LEAST8* = H5T_NATIVE_INT_LEAST8_g
  H5T_NATIVE_UINT_LEAST8* = H5T_NATIVE_UINT_LEAST8_g
  H5T_NATIVE_INT_FAST8* = H5T_NATIVE_INT_FAST8_g
  H5T_NATIVE_UINT_FAST8* = H5T_NATIVE_UINT_FAST8_g

var H5T_NATIVE_INT16_g* {.importc: "H5T_NATIVE_INT16_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT16_g* {.importc: "H5T_NATIVE_UINT16_g", dynlib: libname.}: hid_t

var H5T_NATIVE_INT_LEAST16_g* {.importc: "H5T_NATIVE_INT_LEAST16_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_LEAST16_g* {.importc: "H5T_NATIVE_UINT_LEAST16_g",
                               dynlib: libname.}: hid_t

var H5T_NATIVE_INT_FAST16_g* {.importc: "H5T_NATIVE_INT_FAST16_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_FAST16_g* {.importc: "H5T_NATIVE_UINT_FAST16_g", dynlib: libname.}: hid_t

let 
  H5T_NATIVE_INT16* = H5T_NATIVE_INT16_g
  H5T_NATIVE_UINT16* = H5T_NATIVE_UINT16_g
  H5T_NATIVE_INT_LEAST16* = H5T_NATIVE_INT_LEAST16_g
  H5T_NATIVE_UINT_LEAST16* = H5T_NATIVE_UINT_LEAST16_g
  H5T_NATIVE_INT_FAST16* = H5T_NATIVE_INT_FAST16_g
  H5T_NATIVE_UINT_FAST16* = H5T_NATIVE_UINT_FAST16_g

var H5T_NATIVE_INT32_g* {.importc: "H5T_NATIVE_INT32_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT32_g* {.importc: "H5T_NATIVE_UINT32_g", dynlib: libname.}: hid_t

var H5T_NATIVE_INT_LEAST32_g* {.importc: "H5T_NATIVE_INT_LEAST32_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_LEAST32_g* {.importc: "H5T_NATIVE_UINT_LEAST32_g",
                               dynlib: libname.}: hid_t

var H5T_NATIVE_INT_FAST32_g* {.importc: "H5T_NATIVE_INT_FAST32_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_FAST32_g* {.importc: "H5T_NATIVE_UINT_FAST32_g", dynlib: libname.}: hid_t

let 
  H5T_NATIVE_INT32* = H5T_NATIVE_INT32_g
  H5T_NATIVE_UINT32* = H5T_NATIVE_UINT32_g
  H5T_NATIVE_INT_LEAST32* = H5T_NATIVE_INT_LEAST32_g
  H5T_NATIVE_UINT_LEAST32* = H5T_NATIVE_UINT_LEAST32_g
  H5T_NATIVE_INT_FAST32* = H5T_NATIVE_INT_FAST32_g
  H5T_NATIVE_UINT_FAST32* = H5T_NATIVE_UINT_FAST32_g

var H5T_NATIVE_INT64_g* {.importc: "H5T_NATIVE_INT64_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT64_g* {.importc: "H5T_NATIVE_UINT64_g", dynlib: libname.}: hid_t

var H5T_NATIVE_INT_LEAST64_g* {.importc: "H5T_NATIVE_INT_LEAST64_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_LEAST64_g* {.importc: "H5T_NATIVE_UINT_LEAST64_g",
                               dynlib: libname.}: hid_t

var H5T_NATIVE_INT_FAST64_g* {.importc: "H5T_NATIVE_INT_FAST64_g", dynlib: libname.}: hid_t

var H5T_NATIVE_UINT_FAST64_g* {.importc: "H5T_NATIVE_UINT_FAST64_g", dynlib: libname.}: hid_t

let
  H5T_NATIVE_INT64* = H5T_NATIVE_INT64_g
  H5T_NATIVE_UINT64* = H5T_NATIVE_UINT64_g
  H5T_NATIVE_INT_LEAST64* = H5T_NATIVE_INT_LEAST64_g
  H5T_NATIVE_UINT_LEAST64* = H5T_NATIVE_UINT_LEAST64_g
  H5T_NATIVE_INT_FAST64* = H5T_NATIVE_INT_FAST64_g
  H5T_NATIVE_UINT_FAST64* = H5T_NATIVE_UINT_FAST64_g

##  Operations defined on all datatypes
